# SPiC_Assignment_Repo

./: CMakeLists.txt  main.cpp
domain/include/: Asteroid.hpp  Planet.hpp  SpaceBody.hpp  Vector2.hpp
domain/include/Builder/: AsteroidBuilder.h  PlanetBuilder.h  SpaceBodyBuilder.h
domain/include/Factory/: AsteroidFactory.hpp  PlanetFactory.hpp  SpaceBodyFactory.hpp
domain/src/: Asteroid.cpp  Planet.cpp  SpaceBody.cpp  Vector2.cpp
domain/src/Builder/: AsteroidBuilder.cpp  PlanetBuilder.cpp
domain/src/Factory/: AsteroidFactory.cpp  PlanetFactory.cpp
resources/: test.txt  testdata.csv
serialization/include/: CSVFileParser.hpp  FileParser.hpp  FileReader.hpp  LocalFileReader.hpp
serialization/src/: CSVFileParser.cpp  LocalFileReader.cpp
